--- a/views/admin/products.ejs
+++ b/views/admin/products.ejs
@@ -478,7 +478,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="form-group">
+                <!-- <div class="form-group">
                   <label>Color Options</label>
                   <div class="form-check">
                     <input type="color" value="#008000" id="colorPicker" />
@@ -487,7 +487,7 @@
                     </button>
                   </div>
                   <div class="showColors" id="showColors"></div>
-                </div>
+                </div> -->
                 <div class="form-group">
                   <label for="productOgPrice">Price</label>
                   <input type="number" class="form-control product-og-price" id="productOgPrice"
