--- a/views/users/wishlist.ejs
+++ b/views/users/wishlist.ejs
@@ -92,8 +92,9 @@
                           </td>
                           <td class="product-price">₹<%= item.productPrice %>
                           </td>
+                          <p>HIII <%= item.productPrice %></p>
                           <td class="product-action">
-                            <button class="add-to-cart-btn" data-id="<%= item.productId %>">
+                            <button class="add-to-cart-btn" data-price="<%= item.productPrice %>" data-id="<%= item.productId %>">
                               Add to Cart
                             </button>
                           </td>
@@ -242,16 +243,17 @@
 
     addToCartButtons.forEach((button) => {
       button.addEventListener("click", async (e) => {
-        const productId = e.target.dataset.id;
+        const productId = e.target.getAttribute("data-id");
+        console.log(productId)
         const productSize = "M"; // You can modify this as per your UI for size
         const color = "blue"; // Modify based on the selected color
         const quantity = 1; // Set default quantity to 1
-        const productPrice = parseFloat(e.target.dataset.price); // Get price from dataset
+        const productPrice = parseFloat(e.target.getAttribute("data-price")); // Get price from dataset
         const total = productPrice * quantity; // Calculate the total price
 
         try {
           // Send data to the server to add to cart
-          const response = await fetch(`/addToCart/${productId}`, {
+          const response = await fetch(`/wishlist/addToCart/${productId}`, {
             method: "POST",
             headers: {
               "Content-Type": "application/json",
