Week 11 invoice done

--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -316,23 +316,30 @@
               <div class="card">
                 <div class="card">
                   <div class="card-body">
+                    <!-- Top-Selling Products Chart -->
                     <div>
                       <h3>Top-Selling Products</h3>
                       <canvas id="topSellingChart"></canvas>
                     </div>
+                  
+                    <!-- Top-Selling Categories Chart -->
                     <div>
                       <h3>Top-Selling Categories</h3>
                       <canvas id="topSellingCategoriesChart"></canvas>
                     </div>
+                  
+                    <!-- Top-Selling Brands Chart -->
                     <div>
                       <h3>Top-Selling Brands</h3>
                       <canvas id="topSellingBrandsChart"></canvas>
                     </div>
+                  
+                    <!-- Site Visitors Chart -->
                     <div>
-                      <h3>Site visitors</h3>
+                      <h3>Site Visitors</h3>
                       <canvas id="lineChartWithDots"></canvas>
                     </div>
-                  </div>
+                  </div>                  
                 </div>
               </div>
             </div>
