--- a/views/users/orders.ejs
+++ b/views/users/orders.ejs
@@ -83,6 +83,9 @@
                 <div class="order-actions d-flex justify-content-end ">
                   <!-- <a href="/order/details/<%= order.id %>" class="btn btn-details" style="margin-right: 4px;background-color: rgb(186, 31, 31); border-radius: 8px;border: none;">Return</a> -->
                   <a href="/order/details/<%= order.id %>" class="btn btn-details" style="margin-right: 4px;background-color: #FFAB00; color: #000000;  border-radius: 8px;border: none;">View Details</a>
+                  <a href="/invoice/<%= order.id %>" class="btn btn-outline-magenta btn-sm">
+                    Download Invoice
+    </a>
                 </div>
               </div>
               <% }); %>
