--- a/views/users/layouts/header.ejs
+++ b/views/users/layouts/header.ejs
@@ -3,7 +3,7 @@
     <div id="navlogo" >
       <a href=""><img src="/images/img/logo/A_logo_with_the_letters_M_and_H_together_with_a_cap_on_M-removebg-preview.png" alt=""></a>
     </div>
-    <a class="navbar-brand" href="index.html"><span class="brandname">Men's Hub </span></a>
+    <a class="navbar-brand" href="/home"><span class="brandname">Men's Hub </span></a>
 
     <button
       class="navbar-toggler"
