--- a/views/users/register.ejs
+++ b/views/users/register.ejs
@@ -14,6 +14,9 @@
     
     <!-- Bootstrap CSS and Custom Fonts -->
     <link href="css/bootstrap.min.css" rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Marmelad&display=swap" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@300;400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css">
@@ -41,6 +44,7 @@
     </form>
       
       <div class="divider">- OR -</div>
+      <h2 class="register-form">REGISTER</h2>
       <form  class="registration-form" id="registerForm" >
         <div class="name-inputs">
             <input type="text" name="userName" id="userName" placeholder="userName *">
